--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -17,37 +17,35 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCgE_TPl6PP0qlmcKrhDu7TOTMo32Jfdpo"/>
+            android:value="AIzaSyCgE_TPl6PP0qlmcKrhDu7TOTMo32Jfdpo" />
+
         <receiver
-            android:name="com.ofekdev.parkingreminder.StopGeofenceReceiver"
-            android:enabled="true"
-            android:exported="true"></receiver>
-        <receiver
-            android:name="com.ofekdev.parkingreminder.GeofenceReminderBrodcastReceiver"
+            android:name=".StopGeofenceReceiver"
             android:enabled="true"
             android:exported="true" />
         <receiver
-            android:name="com.ofekdev.parkingreminder.GeofenceBroadcastReceiver"
+            android:name=".GeofenceReminderBrodcastReceiver"
             android:enabled="true"
             android:exported="true" />
         <receiver
-            android:name="com.ofekdev.parkingreminder.StopReceiver"
+            android:name=".GeofenceBroadcastReceiver"
             android:enabled="true"
             android:exported="true" />
         <receiver
-            android:name="com.ofekdev.parkingreminder.GeofenceBroadcastReceiver"
+            android:name=".StopReceiver"
+            android:enabled="true"
+            android:exported="true" />
+        <receiver
+            android:name=".GeofenceBroadcastReceiver"
             android:enabled="true"
             android:exported="true" />
 
-        <activity
-            android:name="com.ofekdev.parkingreminder.MainActivity"
-            >
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
